Wed Sep  7 11:51:06 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rdoc/*, test/rdoc/*: Update rdoc-5.0.0.beta1
	  This version is mostly same as r56072. It contains to remove code
	  for Ruby 1.8

Tue Sep  6 09:23:06 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rdoc/rdoc.gemspec: partly reverted for default gem installer.
	  upstream configuration is not working on ruby core repository.

Mon Sep  5 19:35:22 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rdoc/*, test/rdoc/*: Update rdoc/rdoc master(f191513)
	  https://github.com/rdoc/rdoc/blob/master/History.rdoc#423--2016--
	  https://github.com/rdoc/rdoc/blob/master/History.rdoc#422--2016-02-09

Sun Sep  4 00:17:55 2016  Sho Hashimoto  <sho-h@ruby-lang.org>

	* proc.c: [DOC] fix Object#define_singleton_method and
	  main.define_method return value. [ci skip]

Sat Sep  3 11:28:29 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (ruby_init_stack): check stack bounds even if
	  get_main_stack succeeded, on the "co-routine" case.
	  https://github.com/ruby/ruby/commit/53953ee#commitcomment-18887413

Fri Sep  2 16:06:59 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* internal.h (MEMO_V1_SET, MEMO_V2_SET): fix typos.  use the macro
	  parameter, not the local variable.

Fri Sep  2 00:55:11 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (timestamp_file): move extmk.rb specific tricks
	  from lib/mkmf.rb.  keep RUBYCOMMONDIR prefix not to conflict
	  with a timestamp file in the toplevel.

Thu Sep  1 14:24:16 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (gems): move dirty hacks for bundled gems from
	  mkmf.rb.

	* lib/mkmf.rb (create_makefile): yield all configuration strings.

Wed Aug 31 17:39:19 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (create_makefile): make gem.build_complete file
	  under TARGET_SO_DIR and install it only when the gem build
	  succeeded.  [ruby-core:77057] [Bug #12681]
