@@ -224,7 +224,7 @@ require 'psych/class_loader'
 
 module Psych
   # The version is Psych you're using
-  VERSION         = '2.1.0'
+  VERSION         = '2.1.1'
 
   # The version of libyaml Psych is using
   LIBYAML_VERSION = Psych.libyaml_version.join '.'
