@@ -100,7 +100,7 @@ module Psych
           @string_cache[string] = true
           string
         else
-          Float(string.gsub(/[,_]|\.$/, ''))
+          Float(string.gsub(/[,_]|\.([Ee]|$)/, '\1'))
         end
       else
         int = parse_int string.gsub(/[,_]/, '')
